syntax = "proto3";

package CoreScript;

service CoreScriptRunner {
  rpc ExecuteScript(ExecuteScriptRequest) returns (ExecuteScriptResponse);
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
  rpc GetScriptMetadata(GetScriptMetadataRequest) returns (GetScriptMetadataResponse);
  rpc GetScriptParameters(GetScriptParametersRequest) returns (GetScriptParametersResponse);
  rpc GetCombinedScript(GetCombinedScriptRequest) returns (GetCombinedScriptResponse);
  rpc CreateAndOpenWorkspace(CreateWorkspaceRequest) returns (CreateWorkspaceResponse);
}

message CreateWorkspaceRequest {
  string script_path = 1;
  string script_type = 2;
}

message CreateWorkspaceResponse {
  string workspace_path = 1;
  string error_message = 2;
}

message ScriptFile {
  string file_name = 1;
  string content = 2;
}

message ExecuteScriptRequest {
  string script_content = 1;
  bytes parameters_json = 2;
  string source = 3;
}

message StructuredOutputItem {
  string type = 1;
  string data = 2; 
}

message ExecuteScriptResponse {
  bool is_success = 1;
  string output = 2;
  string error_message = 3;
  repeated string error_details = 4;
  repeated StructuredOutputItem structured_output = 5;
}

message GetStatusRequest {
}

message GetStatusResponse {
  bool rserver_connected = 1;
  bool revit_open = 2;
  string revit_version = 3;
  bool document_open = 4;
  string document_title = 5;
}

message GetScriptMetadataRequest {
  repeated ScriptFile script_files = 1;
}

message GetScriptMetadataResponse {
  ScriptMetadata metadata = 1;
  string error_message = 2;
}

message GetScriptParametersRequest {
  repeated ScriptFile script_files = 1;
}

message ScriptMetadata {
  string name = 1;
  string description = 2;
  string author = 3;
  string website = 4;
  string version = 5;
  repeated string tags = 6;
  repeated string categories = 7;
  string last_run = 8;
  bool is_default = 9;
  repeated string dependencies = 10;
  string history = 11;
}

message GetScriptParametersResponse {
  repeated ScriptParameter parameters = 1;
  string error_message = 2;
}

message ScriptParameter {
  string name = 1;
  string type = 2;
  string default_value_json = 3;
  string description = 4;
  repeated string options = 5;
}

message GetCombinedScriptRequest {
  repeated ScriptFile script_files = 1;
}

message GetCombinedScriptResponse {
  string combined_script = 1;
  string error_message = 2;
}